--- a/scss/partials/_footer.scss
+++ b/scss/partials/_footer.scss
@@ -11,39 +11,53 @@ div.footer {
     text-align: center;
   }
 
-  div.footer-bottom {
+  div.footer-internal{
     background-color: rgba(78, 90, 107, 0.05);
     margin-top: 90px;
-    padding: 30px;
     height: 90px;
+    width: 100%;
 
-    a.oc-logo img {
-      width: 30px;
-      height: 30px;
-    }
+    div.footer-bottom {
+      margin: 0 auto;
+      padding: 30px;
+      &.columns-1{
+        width: 384px;
+      }
+      &.columns-2{
+        width: 728px;
+      }
+      &.columns-3{
+        width: 1072px;
+      }
 
-    a.footer-link {
-      border: solid 1px rgba(78, 90, 107, 0.5);
-      opacity: 0.5;
-      font-weight: 700;
-      font-size: 12px;
-      line-height: 1.5;
-      letter-spacing: 1px;
-      color: #4e5a6b;
-      margin-left: 20px;
-      padding: 5.5px;
-    }
+      a.oc-logo img {
+        width: 30px;
+        height: 30px;
+      }
 
-    div.footer-bottom-right {
-      float: right;
-      width: 100px;
-      height: 30px;
+      a.footer-link {
+        border: solid 1px rgba(78, 90, 107, 0.5);
+        opacity: 0.5;
+        font-weight: 700;
+        font-size: 12px;
+        line-height: 1.5;
+        letter-spacing: 1px;
+        color: #4e5a6b;
+        margin-left: 20px;
+        padding: 5.5px;
+      }
 
-      a {
-        margin-right: 20px;
-        img {
-          width: 30px;
-          height: 30px;
+      div.footer-bottom-right {
+        float: right;
+        width: 100px;
+        height: 30px;
+
+        a {
+          margin-left: 20px;
+          img {
+            width: 30px;
+            height: 30px;
+          }
         }
       }
     }
