do not use bootstrap fixed navbar, set the internal width same as the columns width

--- a/scss/partials/_navbar.scss
+++ b/scss/partials/_navbar.scss
@@ -6,117 +6,41 @@
     border: 0;
 }
 
-nav.navbar {
-  width: auto;
+nav.mynavbar {
+  position: fixed;
+  z-index: 1034;
+  top: 0;
+  left: 0;
+  width: 100%;
   background-color: white;
   border-top: 4px solid $oc_yellow;
   margin: 0px;
   height: #{$navbar_height}px;
   border-bottom: 1px solid $oc_gray_6;
 
-  &>div{
-    margin: 0px;
-    padding: 0px;
-  }
-
-  @include mobile(){
-    div#navbar {
-      width: auto;
-      padding-right: 230px;
-    }
-  }
-
   @include big_web(){
-    & > div {
-      width: auto;
-      padding-left: 40px;
-      padding-right: 40px;
+    div.mynavbar-header {
+      position: relative;
+      margin: 0 auto;
+      padding: 0 30px;
+      &.columns-1{
+        width: 384px;
+      }
+      &.columns-2{
+        width: 728px;
+      }
+      &.columns-3{
+        width: 1072px;
+      }
     }
   }
 
-  div.navbar-header {
-    width: 100%;
-    margin: 0px;
-    padding: 0px;
+  div.mynavbar-header {
     margin-top: 30px;
-
-    &.editing-mode {
-
-      div.editing-title {
-        position: relative;
-        width: 250px;
-        height: 50px;
-        padding-top: 8px;
-        margin: 0 auto;
-        text-align: center;
-        font-size: 22px;
-        text-transform: capitalize;
-      }
-
-      div.left-button {
-        float: left;
-
-        button.cancel-bt {
-          font-size: 15px;
-          margin: 15px 0px;
-          color: $oc_red;
-
-          &:disabled {
-            opacity: 0.4;
-          }
-        }
-      }
-
-      div.right-button {
-        float: right;
-
-        button.save-bt {
-          font-size: 15px;
-          margin: 15px 0px;
-          color: $oc_green;
-
-          &:disabled {
-            opacity: 0.4;
-          }
-        }
-      }
-    }
-
-    button.share-button{
-      margin-top: 4px;
-      img {
-        // width: 20px;
-        height: 30px;
-      }
-
-      &:hover, &:active, &:focus {
-        outline: none;
-      }
-    }
-
-    button.digest-button{
-      margin-top: 4px;
-      img {
-        // width: 20px;
-        height: 20px;
-      }
-
-      &:hover, &:active, &:focus {
-        outline: none;
-      }
-    }
 
     ul.navbar-right {
       float: right;
-      margin: 0px;
+      margin-right: 0px;
     }
   }
-}
-
-nav.tab-navigation {
-  margin-top: 10px;
-}
-
-.navbar-offset {
-  margin-top: 45px;
 }
