set min height to be at least the entire screen with the header at the top and the footer at the bottom of the screen

--- a/scss/partials/_topic_list.scss
+++ b/scss/partials/_topic_list.scss
@@ -15,6 +15,7 @@ div.topic-list{
   content: "";
   padding-bottom: 20px;
   margin-top: #{$navbar_height}px;
+  min-height: calc(100vh - #{$navbar_height}px - #{$footer_height}px);
 
   @include mobile(){
     background-color: #d9d9d9;
