do not cut the chart and pillboxes in collapsed card headers, cut the card when there is the image

--- a/scss/partials/_topic.scss
+++ b/scss/partials/_topic.scss
@@ -50,9 +50,12 @@ div.topic-list {
             margin: 0px;
             padding: 0px;
             width: 100%;
-            max-height: 196px;
-            overflow: hidden;
             position: relative;
+
+            &.card-image {
+              max-height: 196px;
+              overflow: hidden;
+            }
 
             img {
               width:100%;
