--- a/scss/partials/_topic_list.scss
+++ b/scss/partials/_topic_list.scss
@@ -31,23 +31,18 @@ div.topic-list{
     width: 100%;
 
     div.topics-column-container {
-      padding: 20px 10px 20px 30px;
+      padding: 20px 30px 20px 30px;
       margin: 0 auto;
 
-      &.columns-1{
-        width: 384px;
-      }
-      &.columns-2{
-        width: 728px;
-      }
-      &.columns-3{
-        width: 1072px;
-      }
-
       div.topics-column {
-        width: 344px;
-        padding-right: 20px;
+        min-width: 302px;
+        max-width: 500px;
+        margin-right: 20px;
         float: left;
+
+        &:last-child {
+          margin-right: 0px;
+        }
 
         div.topic-row{
           height: auto;
