--- a/scss/partials/_footer.scss
+++ b/scss/partials/_footer.scss
@@ -2,7 +2,7 @@ div.footer {
   border-bottom: 4px solid $oc_yellow;
   background-color: white;
   padding-top: 90px;
-  height: #{$footer_height}px;
+  min-height: #{$footer_height}px;
 
   div.footer-cta {
     font-family: $oc_headers_font;
@@ -10,25 +10,20 @@ div.footer {
     line-height: 1.3;
     color: $oc_gray_5;
     text-align: center;
+    margin: 0 10px;
   }
 
   div.footer-internal{
     background-color: rgba(78, 90, 107, 0.05);
     margin-top: 90px;
-    height: 90px;
+    min-height: 90px;
     width: 100%;
 
     div.footer-bottom {
       margin: 0 auto;
       padding: 30px;
-      &.columns-1{
-        width: 384px;
-      }
-      &.columns-2{
-        width: 728px;
-      }
-      &.columns-3{
-        width: 1072px;
+      @media screen and (max-width: 683px){
+        text-align: center;
       }
 
       a.oc-logo img {
@@ -59,6 +54,12 @@ div.footer {
             width: 30px;
             height: 30px;
           }
+        }
+        @media screen and (max-width: 683px){
+          float: none;
+          text-align: center;
+          width: 100%;
+          margin-top: 10px;
         }
       }
     }
