remove columns dependent width, use vw to express width

--- a/scss/partials/_navbar.scss
+++ b/scss/partials/_navbar.scss
@@ -3,33 +3,22 @@ nav.oc-navbar {
   z-index: 1030;
   top: 0;
   left: 0;
-  width: 100%;
+  width: 100vw;
   background-color: white;
   border-top: 4px solid $oc_yellow;
   margin: 0px;
   height: #{$navbar_height}px;
   border-bottom: 1px solid $oc_gray_6;
 
-  @include big_web(){
-    div.oc-navbar-header {
-      position: relative;
-      margin: 0 auto;
-      padding: 0 30px;
-      margin-top: 30px;
-      &.columns-1{
-        width: 384px;
-      }
-      &.columns-2{
-        width: 728px;
-      }
-      &.columns-3{
-        width: 1072px;
-      }
+  div.oc-navbar-header {
+    position: relative;
+    margin: 0 auto;
+    padding: 0 30px;
+    margin-top: 30px;
 
-      ul.navbar-right {
-        float: right;
-        margin-right: 0px;
-      }
+    ul.navbar-right {
+      float: right;
+      margin-right: 0px;
     }
   }
 }
