--- a/scss/partials/_base.scss
+++ b/scss/partials/_base.scss
@@ -19,6 +19,7 @@ html, body {
   font-family: $oc_main_font;
   font-size: 16px;
   background-color: white;
+  overflow-x: hidden;
 }
 
 .no-scroll {
