add style for body and html

--- a/scss/partials/_base.scss
+++ b/scss/partials/_base.scss
@@ -20,6 +20,8 @@ html, body {
   font-size: 16px;
   background-color: white;
   overflow-x: hidden;
+  height: 100vh;
+  background-color: #333;
 }
 
 .no-scroll {
