--- a/scss/partials/_base.scss
+++ b/scss/partials/_base.scss
@@ -21,7 +21,7 @@ html, body {
   background-color: white;
   overflow-x: hidden;
   height: 100vh;
-  background-color: #333;
+  background-color: #d9d9d9;
 }
 
 .no-scroll {
