--- a/scss/partials/_footer.scss
+++ b/scss/partials/_footer.scss
@@ -49,18 +49,19 @@ div.footer {
         }
       }
 
+      a.twitter, a.github {
+        margin-left: 10px;
+        img {
+          width: 30px;
+          height: 30px;
+        }
+      }
+
       div.footer-bottom-right {
         float: right;
         width: 100px;
         height: 30px;
 
-        a {
-          margin-left: 20px;
-          img {
-            width: 30px;
-            height: 30px;
-          }
-        }
         @media screen and (max-width: 683px){
           float: none;
           text-align: left;
