display inline-block anchors and set height to move the bottom border where we want it

--- a/scss/mixins/_reusable.scss
+++ b/scss/mixins/_reusable.scss
@@ -156,6 +156,8 @@
   }
 
   a {
+    display: inline-block;
+    height: 15px;
     text-decoration: none;
     color: black;
     pointer-events: none;
