express anchor height in em and fix it for closed and expanded card

--- a/scss/mixins/_reusable.scss
+++ b/scss/mixins/_reusable.scss
@@ -157,7 +157,7 @@
 
   a {
     display: inline-block;
-    height: 15px;
+    height: 1.25em;
     text-decoration: none;
     color: black;
     pointer-events: none;
