--- a/scss/partials/_fullscreen_topic.scss
+++ b/scss/partials/_fullscreen_topic.scss
@@ -76,6 +76,7 @@ div.fullscreen-topic {
       a {
         cursor: pointer;
         pointer-events: auto;
+        height: 1.4em;
       }
     }
 
