set minimum height to have the bottom line at the bottom of the screen

--- a/scss/partials/_fullscreen_topic.scss
+++ b/scss/partials/_fullscreen_topic.scss
@@ -27,6 +27,7 @@ div.fullscreen-topic {
     margin: #{$navbar_height}px auto 30px;
     position: relative;
     overflow: hidden;
+    min-height: calc(100vh - #{$navbar_height}px - 30px - 8px);
 
     @include mobile(){
       margin-top: 40px;
