use media queries to set the static x margin to 9px and the auto width for the navbar and footer internal div up to 413px window

--- a/scss/partials/_navbar.scss
+++ b/scss/partials/_navbar.scss
@@ -16,6 +16,12 @@ nav.oc-navbar {
     padding: 0 30px;
     margin-top: 30px;
 
+    @media screen and (max-width: 413px){
+      margin-left: 9px;
+      margin-right: 9px;
+      width: auto !important;
+    }
+
     @media screen and (max-width: 683px){
       padding: 0px;
     }
