use media queries to set the static x margin to 9px and the auto width for the navbar and footer internal div up to 413px window

--- a/scss/partials/_footer.scss
+++ b/scss/partials/_footer.scss
@@ -26,6 +26,14 @@ div.footer {
         text-align: left;
       }
 
+      @media screen and (max-width: 413px){
+        margin-left: 9px;
+        margin-right: 9px;
+        width: auto !important;
+        padding-left: 0px;
+        padding-right: 0px;
+      }
+
       a.oc-logo img {
         width: 30px;
         height: 30px;
