--- a/scss/partials/_topic_list.scss
+++ b/scss/partials/_topic_list.scss
@@ -40,6 +40,12 @@ div.topic-list{
       padding: 20px 30px 20px 30px;
       margin: 0 auto;
 
+      @media screen and (max-width: 413px){
+        margin-left: 9px;
+        margin-right: 9px;
+        width: auto;
+      }
+
       div.topics-column {
         min-width: 302px;
         max-width: 500px;
