add gold bottom line on topic list, fix height w/o scroll

--- a/scss/partials/_company_dashboard.scss
+++ b/scss/partials/_company_dashboard.scss
@@ -7,7 +7,7 @@ div.company-dashboard {
     top: 0px !important;
    
     background: #fff;
-    min-height: 100vh;
+    min-height: calc(100vh - #{$navbar_height}px - #{$footer_height}px);
   }
 }
 
