--- a/scss/partials/_footer.scss
+++ b/scss/partials/_footer.scss
@@ -1,8 +1,7 @@
 div.footer {
-  border-bottom: 4px solid $oc_yellow;
   background-color: white;
   padding-top: 54px;
-  min-height: #{$footer_height}px;
+  height: #{$footer_height}px;
 
   div.footer-cta {
     font-family: $oc_headers_font;
@@ -18,6 +17,7 @@ div.footer {
     margin-top: 54px;
     min-height: 90px;
     width: 100%;
+    border-bottom: 4px solid $oc_yellow;
 
     div.footer-bottom {
       margin: 0 auto;
