--- a/scss/partials/_topic.scss
+++ b/scss/partials/_topic.scss
@@ -9,6 +9,25 @@ div.topic-list {
     text-align: left;
     box-shadow: 1px 2px 2px 0 rgba(0, 0, 0, 0.2), inset 0 1px 3px 0 #ffffff;
 
+    &.add-topic {
+      height: 94.5px;
+      opacity: 0.2;
+      border-radius: 2px;
+      background-color: $oc_gray_6;
+      border: solid 1px $oc_gray_5;
+      text-align: center;
+
+      div.topic-title {
+        opacity: 0.2;
+        font-weight: 700;
+        font-size: 12px;
+        line-height: 1.5;
+        letter-spacing: 1px;
+        color: $oc_gray_5;
+        margin-top: 29px;
+      }
+    }
+
     @include big_web(){
       cursor: pointer;
     }
