--- a/scss/partials/_topic.scss
+++ b/scss/partials/_topic.scss
@@ -11,11 +11,16 @@ div.topic-list {
 
     &.add-topic {
       height: 94.5px;
-      opacity: 0.2;
+      // opacity: 0.2;
       border-radius: 2px;
-      background-color: $oc_gray_6;
-      border: solid 1px $oc_gray_5;
+      background-color: rgba(244, 244, 244 , 0.2);
+      border: solid 1px rgba(78, 90, 107, 0.2);
       text-align: center;
+      position: relative;
+
+      &.active {
+        background-color: #ffffff;
+      }
 
       div.topic-title {
         opacity: 0.2;
