--- a/scss/public/css/app.main.scss
+++ b/scss/public/css/app.main.scss
@@ -62,3 +62,4 @@
 @import "partials/_login_button";
 @import "partials/_fullscreen_topic";
 @import "partials/_menu";
+@import "partials/_add_topic_popover";
