--- a/scss/partials/_topic_overlay_edit.scss
+++ b/scss/partials/_topic_overlay_edit.scss
@@ -1,178 +1,148 @@
-div.topic-overlay-edit {
-  text-align: left;
+div.fullscreen-topic-edit {
+  max-width: 575px;
+  min-width: 302px;
+  margin: #{$navbar_height}px auto 30px;
+  position: relative;
+  overflow: hidden;
+  min-height: calc(100vh - #{$navbar_height}px - 30px - 8px);
 
-  button {
-    background-color: transparent;
-    border: 0px;
-    margin: 0;
-    padding: 0;
-    outline: none;
-    font-size: 12px;
+  @include mobile(){
+    margin-top: 40px;
   }
 
-  button.cancel {
-    width: 90px;
-    height: 25px;
-    margin-top: 23px;
-    margin-right: 15px;
-    float: right;
+  input.topic-edit-title {
+    opacity: 0.5;
+    font-weight: 700;
+    font-size: 12px;
+    line-height: 1.5;
+    letter-spacing: 1px;
+    color: $oc_gray_5;
+    text-transform: uppercase;
+    border: 0px;
+    width: 100%;
+    padding: 0px;
 
-    &.save-visible {
-      margin-top: 50px;
-      margin-right: -90px;
+    &:active, &:focus{
+      border: 0px;
+      outline: none;
+      box-shadow: none;
     }
   }
 
-  button.save-topic {
-    width: 90px;
-    height: 25px;
-    border: 1px solid $oc_gray_3;
-    box-shadow: 1px 1px 1px 0 $topic_overlay_border_color;
-    margin-top: 20px;
-    margin-right: 15px;
-    background-color: $oc_green;
-    color: white;
+  div.topic-edit-title-count {
     float: right;
+    text-align: right;
+    width: 57px;
+    height: 16px;
+    margin-top: 0px;
+    margin-right: 54px;
   }
 
-  div.topic-overlay-edit-header {
-    padding-top: 20px;
-    padding-left: 49px;
-    height: 85px;
-    border-bottom: 2px solid $topic_overlay_border_color;
+  textarea.topic-edit-headline {
+    font-family: $oc_headers_font;
+    font-size: 26px;
+    line-height: 1.4;
+    color: $oc_gray_5;
+    border: 0px;
+    width: 100%;
+    padding: 0px;
+    margin: 0px;
+    margin-top: 2px;
 
-    input.topic-overlay-edit-title {
-      font-size: 26px;
-      color: $topic_overlay_text_color;
-      line-height: 24px;
-      height: 32px;
-      width: 450px;
-      border: 1px solid $oc_gray_2;
-      border-radius: 3px;
+    &:active, &:focus{
+      border: 0px;
+      outline: none;
+      box-shadow: none;
+    }
+  }
 
-      &:active, &:focus{
-        border: 1px solid $oc_gray_3;
-        outline: none;
+  div.topic-edit-headline-count{
+    float: right;
+    text-align: right;
+    width: 57px;
+    height: 16px;
+    margin-top: 0px;
+    margin-right: 54px;
+  }
+
+  div.separator {
+    margin-top: 20px;
+    width: 30px;
+    height: 2px;
+    background-color: rgba(77, 89, 106, 0.2);
+  }
+
+  div.headline-separator {
+    margin-top: 14px;
+  }
+
+  div.topic-growth-finances{
+    margin-top: 10px;
+  }
+
+  div.topic-overlay-edit-data {
+
+    div.finances, div.growth {
+      width: 100%;
+    }
+
+    div.growth-body {
+      table.table {
+        margin-left: 40px;
+        width: 400px;
+        td.no-cell:first-child, tr:first-child{
+          width: 150px;
+        }
       }
     }
 
-    div.topic-overlay-edit-title-count {
-      float: right;
-      text-align: right;
-      width: 57px;
-      height: 16px;
-      margin-top: 0px;
-      margin-right: 54px;
-    }
+    div.pillbox-container.growth{
+      background-color: $oc_gray_1;
+      padding: 12px;
+      border: 1px solid $oc_gray_2;
+      margin-top: 10px;
+      margin-bottom: 10px;
+      text-align: center;
 
-    div.topic-overlay-date {
-      margin-left: 1px;
-      font-size: 12px;
-      color: $topic_overlay_text_color;
-      width: 360px;
-    }
-
-  }
-
-  div.topic-overlay-edit-content {
-    margin: 10px 0px 10px 0px;
-    padding: 15px 50px 15px 50px;
-    max-height: 515px;
-    height: 100%;
-    overflow-x: hidden;
-    overflow-y: scroll;
-    position: relative;
-
-    div.topic-overlay-edit-data {
-
-      div.finances, div.growth {
+      @include big_web(){
         margin-left: -50px;
         width: calc(100% + 100px);
       }
 
-      div.growth-body {
-        table.table {
-          margin-left: 40px;
-          width: 400px;
-          td.no-cell:first-child, tr:first-child{
-            width: 150px;
-          }
-        }
+      @include mobile(){
+        margin-left: -23px;
+        width: calc(100% + 46px);
       }
 
-      div.pillbox-container.growth{
-        background-color: $oc_gray_1;
-        padding: 12px;
-        border: 1px solid $oc_gray_2;
-        margin-top: 10px;
-        margin-bottom: 10px;
-        text-align: center;
+      @include pillbox();
 
-        @include big_web(){
-          margin-left: -50px;
-          width: calc(100% + 100px);
-        }
-
-        @include mobile(){
-          margin-left: -23px;
-          width: calc(100% + 46px);
-        }
-
-        @include pillbox();
-
-        label.pillbox.new-metric-slug-placeholder{
-          background-color: $oc_green_light;
-          color: white;
-          text-shadow: 1px 1px 8px rgba(0, 0, 0, 0.6);
-        }
+      label.pillbox.new-metric-slug-placeholder{
+        background-color: $oc_green_light;
+        color: white;
+        text-shadow: 1px 1px 8px rgba(0, 0, 0, 0.6);
       }
     }
+  }
 
-    div.topic-overlay-edit-headline-count{
-      text-align: right;
-      height: 16px;
-      font-size: 14px;
-      width: 500px;
-      margin-bottom: 24px;
-    }
+  div.topic-body{
+    margin-top: 22px;
 
-    textarea.topic-overlay-edit-headline {
-      resize: none;
-      font-weight: 600;
-      font-size: 20px;
-      color: $topic_overlay_text_color;
-      border: 1px solid transparent;
-
-      &:active, &:focus{
-        border: 1px solid transparent;
-        outline: none;
-      }
-    }
-
-    div.topic-overlay-edit-body {
-      border: 1px solid transparent;
-      margin-top: 1px;
-      font-size: 15px;
-      line-height: 1.7;
-      color: #141312;
+    &:active, &:focus {
+      border: 0px;
       outline: none;
+      box-shadow: none;
+    }
 
-      &:active, &:focus {
-        border: 1px solid transparent;
-      }
-
-      * {
-        font-size: 15px;
-        line-height: 1.7;
-        color: #141312;
-      }
+    &, div.topic-body *{
+      font-family: $oc_headers_font;
+      font-size: 18px;
+      line-height: 1.8;
+      color: $oc_gray_5;
 
       a {
-        text-decoration: underline;
-      }
-
-      img {
-        width: 100%;
+        cursor: pointer;
+        pointer-events: auto;
+        height: 1.4em;
       }
     }
   }
