--- a/resources/public/css/medium-editor/default.css
+++ b/resources/public/css/medium-editor/default.css
@@ -3,7 +3,7 @@
   top: 50px; }
 
 .medium-toolbar-arrow-over:before {
-  border-color: transparent transparent #242424 transparent;
+  border-color: transparent transparent #4E5A6B transparent;
   top: -8px; }
 
 .medium-editor-toolbar {
@@ -43,11 +43,11 @@
     color: #fff; }
 
 .medium-editor-toolbar-form {
-  background: #242424;
+  background: #4E5A6B;
   border-radius: 5px;
   color: #999; }
   .medium-editor-toolbar-form .medium-editor-toolbar-input {
-    background: #242424;
+    background: #4E5A6B;
     box-sizing: border-box;
     color: #ccc;
     height: 50px; }
@@ -55,7 +55,7 @@
     color: #fff; }
 
 .medium-editor-toolbar-anchor-preview {
-  background: #242424;
+  background: #4E5A6B;
   border-radius: 5px;
   color: #fff; }
 
