add a small class to reset button styles

--- a/scss/public/css/app.main.scss
+++ b/scss/public/css/app.main.scss
@@ -61,3 +61,4 @@
 @import "partials/_fullscreen_topic";
 @import "partials/_menu";
 @import "partials/_add_topic_popover";
+@import "partials/_atomic";
