--- a/scss/partials/_fullscreen_topic.scss
+++ b/scss/partials/_fullscreen_topic.scss
@@ -140,9 +140,10 @@ div.fullscreen-topic {
     div.topic-attribution {
       margin-top: 10px;
       font-family: $oc_headers_font;
-      font-size: 18px;
+      font-size: 16px;
       line-height: 1.8;
       color: $oc_gray_5;
+      opacity: 0.5;
     }
 
     div.topic-revisions {
