--- a/scss/partials/_topic.scss
+++ b/scss/partials/_topic.scss
@@ -145,6 +145,10 @@ div.topic-list {
               cursor: pointer;
             }
 
+            a {
+              text-decoration: none;
+            }
+
             img{
               display: none;
             }
