--- a/scss/partials/_loading.scss
+++ b/scss/partials/_loading.scss
@@ -5,8 +5,7 @@ div.oc-loading {
   width: 100%;
   height: 100%;
   display: none;
-  background-color: rgba(255, 255, 255, 0.7);
-  // min-height: 1000px;
+  background-color: rgb(243, 243, 243);
   z-index: 1031;
 
   &.active {
@@ -15,15 +14,15 @@ div.oc-loading {
 
   div.oc-loading-internal {
     background: url("/img/loading.gif") no-repeat;
-    background-size: 102px 34px;
-    width: 102px;
-    height: 34px;
+    background-size: 64px 64px;
+    width: 64px;
+    height: 64px;
     position: relative;
     top: 50%;
     left: 50%;
-    margin-left: -51px;
-    margin-top: -17px;
+    margin-left: -32px;
+    margin-top: -32px;
 
-    @include image-2x("/img/loading@2x.gif", 102px, 34px);
+    @include image-2x("/img/loading@2x.gif", 64px, 64px);
   }
 }
