--- a/scss/partials/_add_topic_popover.scss
+++ b/scss/partials/_add_topic_popover.scss
@@ -8,27 +8,57 @@ div.add-topic-popover {
   border-top: solid 2px $oc_yellow;
   box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.5);
 
-  &.column-1 {
-    left: 249px;
+  div.triangle {
+    position: absolute;
+    top: 0px;
+  }
 
-    div.triangle {
-      @include triangle(left, $oc_gray_5);
-      left: -10px;
-    }
+  &.column-1{
+    left: 249px;
   }
 
   &.column-2, &.column-3 {
     left: -80px;
+  }
 
-    div.triangle {
-      @include triangle(right, $oc_gray_5);
-      right: -10px;
+  &.column-1:not(.show-above){
+    div.triangle{
+      top: 9px;
+      @include triangle(left, $oc_gray_5, 8px);
+      left: -12px;
     }
   }
 
-  div.triangle {
-    position: absolute;
-    top: 0px;
+  &.column-2:not(.show-above), &.column-3:not(.show-above) {
+
+    div.triangle {
+      top: 8px;
+      @include triangle(right, $oc_gray_5, 8px);
+      right: -12px;
+    }
+  }
+
+  // show the popover above the add topic card
+  &.show-above {
+    top: -247px;
+
+    div.triangle {
+      top: 285px;
+    }
+
+    &.column-1 {
+      div.triangle {
+        @include triangle(left, $oc_gray_5, 8px);
+        left: -12px;
+      }
+    }
+
+    &.column-2, &.column-3 {
+      div.triangle {
+        @include triangle(right, $oc_gray_5, 8px);
+        right: -12px;
+      }
+    }
   }
 
   div.add-topic-popover-header {
