uniform the chart headers classes to the new design

--- a/scss/partials/_chart_headers.scss
+++ b/scss/partials/_chart_headers.scss
@@ -29,11 +29,12 @@ div.chart-header-container {
 
 div.actual-container{
   h3.actual {
-    color: $oc_blue;
+    margin-bottom: 5px;
   }
 
   h3.actual.gray {
-    color: $oc_gray;
+    color: $oc_gray_5;
+    opacity: 0.3;
   }
 
   h3.actual.green {
@@ -45,12 +46,14 @@ div.actual-container{
   }
 
   h3.actual.blue {
-    color: $oc_blue;
+    color: $oc_gray_5;
+    opacity: 0.5;
   }
 
   h3.actual-label {
     font-size: 12px;
     font-weight: 700;
+    margin-top: 0px;
 
     &.gray {
       color: $oc_gray;
