new css for growth metadata edit

--- a/scss/public/css/app.main.scss
+++ b/scss/public/css/app.main.scss
@@ -58,3 +58,4 @@
 @import "partials/_menu";
 @import "partials/_add_topic_popover";
 @import "partials/_atomic";
+@import "partials/_growth_metric_edit";
