--- a/scss/mixins/_reusable.scss
+++ b/scss/mixins/_reusable.scss
@@ -75,18 +75,18 @@
 @mixin pillbox(){
   label.pillbox {
     margin: 4px 3px;
-    padding: 3px 12px;
+    padding: 6px 12px;
     height: 30px;
-    background-color: #ffffff;
+    background-color: rgba(255, 255, 255, 0.5);
     border: 1px solid rgba(78, 90, 107, 0.5);
     font-size: 12px;
-    color: $oc_gray_5;
+    color: rgba(78, 90, 107, 0.5);
     cursor: pointer;
-    opacity: 0.5;
 
     &.active {
       background-color: #ffffff;
-      opacity: 1;
+      color: $oc_gray_5;
+      border: 1px solid $oc_gray_5;
     }
   }
 }
