style the growth metadata buttons with new design

--- a/scss/partials/_growth_metric_edit.scss
+++ b/scss/partials/_growth_metric_edit.scss
@@ -51,5 +51,33 @@ div.growth-metric-edit{
       border: 0px solid transparent;
       border-radius: 0px;
     }
+
+    button {
+      height: 30px;
+      font-weight: 700;
+      font-size: 12px;
+      line-height: 1.5;
+      letter-spacing: 1px;
+      color: #4e5a6b;
+      padding: 4px 20px;
+      border: 0px solid black;
+      outline: none;
+      margin-right: 10px;
+
+      &.save {
+        background-color: $oc_yellow;
+        color: $oc_gray_5;
+      }
+
+      &.delete {
+        background-color: transparent;
+        color: $oc_gray_5;
+      }
+
+      &.cancel {
+        background-color: transparent;
+        color: $oc_gray_5;
+      }
+    }
   }
 }
