remove new metric special style, remove pillboxes background

--- a/scss/partials/_topic_overlay_edit.scss
+++ b/scss/partials/_topic_overlay_edit.scss
@@ -166,21 +166,14 @@ div.fullscreen-topic-edit {
     }
 
     div.pillbox-container.growth{
-      background-color: $oc_gray_1;
+      background-color: transparent;
       padding: 12px;
-      border: 1px solid $oc_gray_2;
       margin-top: 10px;
       margin-bottom: 10px;
       text-align: center;
       width: 100%;
 
       @include pillbox();
-
-      label.pillbox.new-metric-slug-placeholder{
-        background-color: $oc_green_light;
-        color: white;
-        text-shadow: 1px 1px 8px rgba(0, 0, 0, 0.6);
-      }
     }
   }
 
