--- a/scss/partials/_topic_overlay_edit.scss
+++ b/scss/partials/_topic_overlay_edit.scss
@@ -100,14 +100,17 @@ div.fullscreen-topic-edit {
           border: 0px solid transparent;
         }
 
-        thead th {
+        thead tr th {
           font-weight: 700;
           font-size: 12px;
           line-height: 1.5;
           letter-spacing: 1px;
           color: $oc_gray_5;
           text-transform: uppercase;
-          min-width: 100px;
+
+          &:first-child {
+            min-width: 100px;
+          }
         }
 
         tr:last-child td:last-child {
