--- a/scss/partials/_base.scss
+++ b/scss/partials/_base.scss
@@ -106,3 +106,11 @@ svg.emojione {
   padding-left: 15px;
   padding-right: 15px;
 }
+
+*::selection {
+  background: rgba(249,215,72, 0.5);
+}
+
+*::-moz-selection {
+  background: rgba(249,215,72, 0.5);
+}
